# MOVR

./: .gitignore  ASYNC_EXECUTION_IMPLEMENTATION_PLAN.md  COMPONENT_MIGRATION_GRAPH_SPEC.md  README.md  SHARED_RESOURCES_MIGRATION_SPEC.md
agentic-workspace-chat/backend/: README.md  pyproject.toml
agentic-workspace-chat/backend/app/: agent_context.py  aws_session.py  bedrock.py  config.py  custom_runtime.py  main.py  models.py  tools.py  (+6 more)
ai-workspace/backend/: .gitignore  Dockerfile  README.md  pyproject.toml
test-agent/: .env.example  .gitignore  FILE_REFERENCE.md  FUNCTIONAL_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  conftest.py  pyproject.toml
test-agent/app/: config.py  errors.py  logging_config.py  main.py
test-agent/benchmarks/: golden_scenarios.json
test-agent/technical-architecture/: 01-getting-started.md  02-architecture-and-flow.md  03-backend-components.md  04-frontend-and-host-wiring.md  05-contracts-sse-and-mocks.md  06-configuration-and-operations.md  07-wiring-and-ast-dependency-graph.md  08-logical-decisions-and-stage-dag.md  09-detailed-stage-decision-catalog.md  10-decision-specifications-and-trace.md  11-component-migration-playbook.md  12-internal-external-dependency-graphs.md  13-service-dependency-map.md  14-task-frontend-persistence-portability.md  README.md
test-agent/tests/: test_enterprise_gaps.py  test_generation_api_routes.py  test_llm_adapter_migration.py  test_logging_standard.py  test_patch_validation.py  test_placement_resolution.py  test_structured_output_hardening.py  test_target_resolution.py  test_write_repair_loop.py
(+1033 files in other folders)
