[project]
name = "ai-workspace-backend"
version = "0.1.0"
description = "AI Workspace backend — Copilot-style Chat/Agent mode, built on the existing ModelClientFactory/DefaultLLMClient integration."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
mysql = [
    "pymysql>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
